// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Mutliple MenuItem 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#363B40",
    }
  }
  title=""
>
  <div
    className="c1"
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item Mutliple MenuItem checked 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "#363B40",
    }
  }
  title=""
>
  <div
    className="c1"
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item Single MenuItem 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#363B40",
    }
  }
  title="hello"
>
  <div
    className="c1"
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      hello
    </span>
  </div>
</li>
`;

exports[`Item Single MenuItem checked 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

<li
  checked={true}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "backgroundColor": "transparent",
      "color": "#363B40",
    }
  }
  title=""
>
  <div
    className="c1"
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    >
      <a>
        hello
      </a>
    </span>
  </div>
</li>
`;

exports[`Item children: null 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
  font-weight: 100;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-transition-property: background-color,border,borderRadius,opacity,boxShadow;
  transition-property: background-color,border,borderRadius,opacity,boxShadow;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  font-size: 1.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  height: 3.6rem;
}

.c0 > i {
  vertical-align: middle;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  overflow: hidden;
  padding-top: 0rem;
  padding-bottom: 0rem;
  padding-left: 1.2rem;
  padding-right: 1.2rem;
}

.c1 i {
  vertical-align: middle;
}

.c2 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
}

<li
  checked={false}
  className="c0"
  disabled={false}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  style={
    Object {
      "color": "#363B40",
    }
  }
  title=""
>
  <div
    className="c1"
    style={
      Object {
        "height": "3.2rem",
      }
    }
  >
    <span
      className="c2"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      style={
        Object {
          "fontSize": "1.4rem",
        }
      }
    />
  </div>
</li>
`;
